[package]
name = "rurl"
version = "0.1.0"
authors = ["Bruno Ribeiro da Silva <bruno@loadsmart.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = "2.33"

[profile.release]
lto = true
panic = "abort"
