[package]
authors = ["Bruno Ribeiro <root@loop0.sh>"]
edition = "2018"
name = "rurl"
version = "0.1.3"

[dependencies]
clap = "2.33"
reqwest = {version = "0.11", features = ["blocking", "json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[profile.release]
lto = true
panic = "abort"
